Update swagger and move backend
